@@ -17,9 +17,9 @@
 
 package org.apache.ignite.internal.processors.query.calcite.rel;
 
-import java.util.List;
+import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils.changeTraits;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
 import org.apache.calcite.plan.RelOptPlanner;
@@ -33,22 +33,21 @@ import org.apache.calcite.util.ImmutableBitSet;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCost;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCostFactory;
 
-import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils.changeTraits;
-
 /**
- *
+ * IgniteAggregate.
+ * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
  */
-public abstract class IgniteAggregate extends Aggregate implements IgniteRel {
+public abstract class IgniteAggregate extends Aggregate implements InternalIgniteRel {
     /** {@inheritDoc} */
     protected IgniteAggregate(
-        RelOptCluster cluster,
-        RelTraitSet traitSet,
-        RelNode input,
-        ImmutableBitSet groupSet,
-        List<ImmutableBitSet> groupSets,
-        List<AggregateCall> aggCalls
+            RelOptCluster cluster,
+            RelTraitSet traitSet,
+            RelNode input,
+            ImmutableBitSet groupSet,
+            List<ImmutableBitSet> groupSets,
+            List<AggregateCall> aggCalls
     ) {
-        super(cluster, traitSet, ImmutableList.of(), input, groupSet, groupSets, aggCalls);
+        super(cluster, traitSet, List.of(), input, groupSet, groupSets, aggCalls);
     }
 
     /** {@inheritDoc} */
@@ -57,18 +56,23 @@ public abstract class IgniteAggregate extends Aggregate implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override public double estimateRowCount(RelMetadataQuery mq) {
+    @Override
+    public double estimateRowCount(RelMetadataQuery mq) {
         Double groupsCnt = mq.getDistinctRowCount(getInput(), groupSet, null);
 
-        if (groupsCnt != null)
+        if (groupsCnt != null) {
             return groupsCnt;
+        }
 
         // Estimation of the groups count is not available.
         // Use heuristic estimation for result rows count.
         return super.estimateRowCount(mq);
     }
 
-    /** */
+    /**
+     * EstimateMemoryForGroup.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     public double estimateMemoryForGroup(RelMetadataQuery mq) {
         double mem = groupSet.cardinality() * IgniteCost.AVERAGE_FIELD_SIZE;
 
@@ -77,44 +81,51 @@ public abstract class IgniteAggregate extends Aggregate implements IgniteRel {
             double rows = input.estimateRowCount(mq);
 
             for (AggregateCall aggCall : aggCalls) {
-                if (aggCall.isDistinct())
+                if (aggCall.isDistinct()) {
                     mem += IgniteCost.AGG_CALL_MEM_COST * rows / grps;
-                else
+                } else {
                     mem += IgniteCost.AGG_CALL_MEM_COST;
+                }
             }
         }
 
         return mem;
     }
 
-    /** */
+    /**
+     * ComputeSelfCostHash.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     public RelOptCost computeSelfCostHash(RelOptPlanner planner, RelMetadataQuery mq) {
-        IgniteCostFactory costFactory = (IgniteCostFactory)planner.getCostFactory();
+        IgniteCostFactory costFactory = (IgniteCostFactory) planner.getCostFactory();
 
         double inRows = mq.getRowCount(getInput());
         double groups = estimateRowCount(mq);
 
         return costFactory.makeCost(
-            inRows,
-            inRows * IgniteCost.ROW_PASS_THROUGH_COST,
-            0,
-            groups * estimateMemoryForGroup(mq),
-            0
+                inRows,
+                inRows * IgniteCost.ROW_PASS_THROUGH_COST,
+                0,
+                groups * estimateMemoryForGroup(mq),
+                0
         );
     }
 
-    /** */
+    /**
+     * ComputeSelfCostSort.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     public RelOptCost computeSelfCostSort(RelOptPlanner planner, RelMetadataQuery mq) {
-        IgniteCostFactory costFactory = (IgniteCostFactory)planner.getCostFactory();
+        IgniteCostFactory costFactory = (IgniteCostFactory) planner.getCostFactory();
 
         double inRows = mq.getRowCount(getInput());
 
         return costFactory.makeCost(
-            inRows,
-            inRows * IgniteCost.ROW_PASS_THROUGH_COST,
-            0,
-            estimateMemoryForGroup(mq),
-            0
+                inRows,
+                inRows * IgniteCost.ROW_PASS_THROUGH_COST,
+                0,
+                estimateMemoryForGroup(mq),
+                0
         );
     }
 }
