@@ -14,11 +14,12 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.apache.ignite.internal.processors.query.calcite.rel;
 
-import java.util.List;
+import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils.changeTraits;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptCost;
 import org.apache.calcite.plan.RelOptPlanner;
@@ -34,42 +35,45 @@ import org.apache.calcite.util.Pair;
 import org.apache.calcite.util.Util;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCost;
 import org.apache.ignite.internal.processors.query.calcite.metadata.cost.IgniteCostFactory;
+import org.apache.ignite.internal.processors.query.calcite.trait.IgniteDistributions;
 import org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils;
-
-import static org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils.changeTraits;
 
 /**
  * Ignite sort operator.
  */
-public class IgniteSort extends Sort implements IgniteRel {
+public class IgniteSort extends Sort implements InternalIgniteRel {
     /**
      * Constructor.
      *
-     * @param cluster Cluster.
-     * @param traits Trait set.
-     * @param child Input node.
+     * @param cluster   Cluster.
+     * @param traits    Trait set.
+     * @param child     Input node.
      * @param collation Collation.
      */
     public IgniteSort(
-        RelOptCluster cluster,
-        RelTraitSet traits,
-        RelNode child,
-        RelCollation collation) {
+            RelOptCluster cluster,
+            RelTraitSet traits,
+            RelNode child,
+            RelCollation collation) {
         super(cluster, traits, child, collation);
     }
 
-    /** */
+    /**
+     * Constructor.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     public IgniteSort(RelInput input) {
         super(changeTraits(input, IgniteConvention.INSTANCE));
     }
 
     /** {@inheritDoc} */
-    @Override public Sort copy(
-        RelTraitSet traitSet,
-        RelNode newInput,
-        RelCollation newCollation,
-        RexNode offset,
-        RexNode fetch
+    @Override
+    public Sort copy(
+            RelTraitSet traitSet,
+            RelNode newInput,
+            RelCollation newCollation,
+            RexNode offset,
+            RexNode fetch
     ) {
         assert offset == null && fetch == null;
 
@@ -77,49 +81,64 @@ public class IgniteSort extends Sort implements IgniteRel {
     }
 
     /** {@inheritDoc} */
-    @Override public <T> T accept(IgniteRelVisitor<T> visitor) {
+    @Override
+    public <T> T accept(IgniteRelVisitor<T> visitor) {
         return visitor.visit(this);
     }
 
     /** {@inheritDoc} */
-    @Override public RelCollation collation() {
+    @Override
+    public RelCollation collation() {
         return collation;
     }
 
     /** {@inheritDoc} */
-    @Override public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
-        if (isEnforcer() || required.getConvention() != IgniteConvention.INSTANCE)
+    @Override
+    public Pair<RelTraitSet, List<RelTraitSet>> passThroughTraits(RelTraitSet required) {
+        if (isEnforcer() || required.getConvention() != IgniteConvention.INSTANCE) {
             return null;
+        }
 
         RelCollation collation = TraitUtils.collation(required);
 
-        return Pair.of(required.replace(collation), ImmutableList.of(required.replace(RelCollations.EMPTY)));
+        return Pair.of(required.replace(collation), List.of(required.replace(RelCollations.EMPTY)));
     }
 
     /** {@inheritDoc} */
-    @Override public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
+    @Override
+    public Pair<RelTraitSet, List<RelTraitSet>> deriveTraits(RelTraitSet childTraits, int childId) {
         assert childId == 0;
 
-        if (isEnforcer() || childTraits.getConvention() != IgniteConvention.INSTANCE)
+        if (isEnforcer() || childTraits.getConvention() != IgniteConvention.INSTANCE) {
             return null;
+        }
 
-        return Pair.of(childTraits.replace(collation()), ImmutableList.of(childTraits));
+        return Pair.of(childTraits.replace(collation()), List.of(childTraits));
     }
 
     /** {@inheritDoc} */
-    @Override public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
+    @Override
+    public RelOptCost computeSelfCost(RelOptPlanner planner, RelMetadataQuery mq) {
         double rows = mq.getRowCount(getInput());
 
         double cpuCost = rows * IgniteCost.ROW_PASS_THROUGH_COST + Util.nLogN(rows) * IgniteCost.ROW_COMPARISON_COST;
         double memory = rows * getRowType().getFieldCount() * IgniteCost.AVERAGE_FIELD_SIZE;
 
-        IgniteCostFactory costFactory = (IgniteCostFactory)planner.getCostFactory();
+        IgniteCostFactory costFactory = (IgniteCostFactory) planner.getCostFactory();
 
-        return costFactory.makeCost(rows, cpuCost, 0, memory, 0);
+        RelOptCost cost = costFactory.makeCost(rows, cpuCost, 0, memory, 0);
+
+        // Distributed sorting is more preferable than sorting on the single node.
+        if (TraitUtils.distribution(traitSet).satisfies(IgniteDistributions.single())) {
+            cost.plus(costFactory.makeTinyCost());
+        }
+
+        return cost;
     }
 
     /** {@inheritDoc} */
-    @Override public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
+    @Override
+    public IgniteRel clone(RelOptCluster cluster, List<IgniteRel> inputs) {
         return new IgniteSort(cluster, getTraitSet(), sole(inputs), collation);
     }
 }
