@@ -18,8 +18,6 @@
 package org.apache.ignite.internal.processors.query.calcite.rel.logical;
 
 import java.util.List;
-
-import com.google.common.collect.ImmutableList;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptTable;
 import org.apache.calcite.plan.RelTraitSet;
@@ -29,7 +27,7 @@ import org.apache.calcite.rex.RexNode;
 import org.apache.calcite.util.ImmutableBitSet;
 import org.apache.calcite.util.mapping.Mappings;
 import org.apache.ignite.internal.processors.query.calcite.rel.AbstractIndexScan;
-import org.apache.ignite.internal.processors.query.calcite.schema.IgniteTable;
+import org.apache.ignite.internal.processors.query.calcite.schema.InternalIgniteTable;
 import org.apache.ignite.internal.processors.query.calcite.trait.TraitUtils;
 import org.apache.ignite.internal.processors.query.calcite.type.IgniteTypeFactory;
 import org.apache.ignite.internal.processors.query.calcite.util.Commons;
@@ -37,74 +35,79 @@ import org.apache.ignite.internal.processors.query.calcite.util.IndexConditions;
 import org.apache.ignite.internal.processors.query.calcite.util.RexUtils;
 import org.jetbrains.annotations.Nullable;
 
-/** */
+/**
+ * IgniteLogicalIndexScan.
+ * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+ */
 public class IgniteLogicalIndexScan extends AbstractIndexScan {
     /** Creates a IgniteLogicalIndexScan. */
     public static IgniteLogicalIndexScan create(
-        RelOptCluster cluster,
-        RelTraitSet traits,
-        RelOptTable table,
-        String idxName,
-        @Nullable List<RexNode> proj,
-        @Nullable RexNode cond,
-        @Nullable ImmutableBitSet requiredColumns
+            RelOptCluster cluster,
+            RelTraitSet traits,
+            RelOptTable table,
+            String idxName,
+            @Nullable List<RexNode> proj,
+            @Nullable RexNode cond,
+            @Nullable ImmutableBitSet requiredColumns
     ) {
-        IgniteTable tbl = table.unwrap(IgniteTable.class);
+        InternalIgniteTable tbl = table.unwrap(InternalIgniteTable.class);
         IgniteTypeFactory typeFactory = Commons.typeFactory(cluster);
         RelDataType rowType = tbl.getRowType(typeFactory, requiredColumns);
         RelCollation collation = tbl.getIndex(idxName).collation();
 
         if (requiredColumns != null) {
             Mappings.TargetMapping targetMapping = Commons.mapping(requiredColumns,
-                tbl.getRowType(typeFactory).getFieldCount());
+                    tbl.getRowType(typeFactory).getFieldCount());
             collation = collation.apply(targetMapping);
-            if (proj != null)
+            if (proj != null) {
                 collation = TraitUtils.projectCollation(collation, proj, rowType);
+            }
         }
 
         IndexConditions idxCond = new IndexConditions();
 
         if (collation != null && !collation.getFieldCollations().isEmpty()) {
             idxCond = RexUtils.buildSortedIndexConditions(
-                cluster,
-                collation,
-                cond,
-                tbl.getRowType(typeFactory),
-                requiredColumns);
+                    cluster,
+                    collation,
+                    cond,
+                    tbl.getRowType(typeFactory),
+                    requiredColumns);
         }
 
         return new IgniteLogicalIndexScan(
-            cluster,
-            traits,
-            table,
-            idxName,
-            proj,
-            cond,
-            idxCond,
-            requiredColumns);
+                cluster,
+                traits,
+                table,
+                idxName,
+                proj,
+                cond,
+                idxCond,
+                requiredColumns);
     }
 
     /**
-     * Creates a TableScan.
-     * @param cluster Cluster that this relational expression belongs to
-     * @param traits Traits of this relational expression
-     * @param tbl Table definition.
-     * @param idxName Index name.
-     * @param proj Projects.
-     * @param cond Filters.
-     * @param idxCond Index conditions.
+     * Creates a IndexScan.
+     *
+     * @param cluster      Cluster that this relational expression belongs to
+     * @param traits       Traits of this relational expression
+     * @param tbl          Table definition.
+     * @param idxName      Index name.
+     * @param proj         Projects.
+     * @param cond         Filters.
+     * @param idxCond      Index conditions.
      * @param requiredCols Participating columns.
      */
     private IgniteLogicalIndexScan(
-        RelOptCluster cluster,
-        RelTraitSet traits,
-        RelOptTable tbl,
-        String idxName,
-        @Nullable List<RexNode> proj,
-        @Nullable RexNode cond,
-        @Nullable IndexConditions idxCond,
-        @Nullable ImmutableBitSet requiredCols
+            RelOptCluster cluster,
+            RelTraitSet traits,
+            RelOptTable tbl,
+            String idxName,
+            @Nullable List<RexNode> proj,
+            @Nullable RexNode cond,
+            @Nullable IndexConditions idxCond,
+            @Nullable ImmutableBitSet requiredCols
     ) {
-        super(cluster, traits, ImmutableList.of(), tbl, idxName, proj, cond, idxCond, requiredCols);
+        super(cluster, traits, List.of(), tbl, idxName, proj, cond, idxCond, requiredCols);
     }
 }
