@@ -17,14 +17,19 @@
 
 package org.apache.ignite.internal.processors.query.calcite.exec.rel;
 
+import static org.apache.ignite.internal.testframework.IgniteTestUtils.assertThrowsWithCause;
+import static org.apache.ignite.internal.util.ArrayUtils.asList;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import it.unimi.dsi.fastutil.ints.IntOpenHashSet;
+import it.unimi.dsi.fastutil.ints.IntSet;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-
-import com.google.common.collect.ImmutableList;
 import org.apache.calcite.rel.RelCollations;
 import org.apache.calcite.rel.core.AggregateCall;
 import org.apache.calcite.rel.type.RelDataType;
@@ -42,18 +47,15 @@ import org.apache.ignite.internal.processors.query.calcite.util.TypeUtils;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 
-import static org.apache.ignite.internal.testframework.IgniteTestUtils.assertThrowsWithCause;
-import static org.apache.ignite.internal.util.ArrayUtils.asList;
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-
 /**
- *
+ * BaseAggregateTest.
+ * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
  */
 public abstract class BaseAggregateTest extends AbstractExecutionTest {
-    /** */
+    /**
+     * Count.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void count(TestAggregateType testAgg) {
@@ -61,36 +63,36 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         IgniteTypeFactory tf = ctx.getTypeFactory();
         RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, Arrays.asList(
-            row(0, 200),
-            row(1, 300),
-            row(1, 1400),
-            row(0, 1000)
+                row(0, 200),
+                row(1, 300),
+                row(1, 1400),
+                row(0, 1000)
         ));
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.COUNT,
-            false,
-            false,
-            false,
-            ImmutableIntList.of(),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(int.class),
-            null);
+                SqlStdOperatorTable.COUNT,
+                false,
+                false,
+                false,
+                ImmutableIntList.of(),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(int.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -104,7 +106,10 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         assertFalse(root.hasNext());
     }
 
-    /** */
+    /**
+     * Min.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void min(TestAggregateType testAgg) {
@@ -112,36 +117,36 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         IgniteTypeFactory tf = ctx.getTypeFactory();
         RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, Arrays.asList(
-            row(0, 200),
-            row(1, 300),
-            row(1, 1400),
-            row(0, 1000)
+                row(0, 200),
+                row(1, 300),
+                row(1, 1400),
+                row(0, 1000)
         ));
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.MIN,
-            false,
-            false,
-            false,
-            ImmutableIntList.of(1),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(int.class),
-            null);
+                SqlStdOperatorTable.MIN,
+                false,
+                false,
+                false,
+                ImmutableIntList.of(1),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(int.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -155,7 +160,10 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         assertFalse(root.hasNext());
     }
 
-    /** */
+    /**
+     * Max.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void max(TestAggregateType testAgg) {
@@ -163,36 +171,36 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         IgniteTypeFactory tf = ctx.getTypeFactory();
         RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, Arrays.asList(
-            row(0, 200),
-            row(1, 300),
-            row(1, 1400),
-            row(0, 1000)
+                row(0, 200),
+                row(1, 300),
+                row(1, 1400),
+                row(0, 1000)
         ));
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.MAX,
-            false,
-            false,
-            false,
-            ImmutableIntList.of(1),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(int.class),
-            null);
+                SqlStdOperatorTable.MAX,
+                false,
+                false,
+                false,
+                ImmutableIntList.of(1),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(int.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -206,7 +214,10 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         assertFalse(root.hasNext());
     }
 
-    /** */
+    /**
+     * Avg.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void avg(TestAggregateType testAgg) {
@@ -214,36 +225,36 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         IgniteTypeFactory tf = ctx.getTypeFactory();
         RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, Arrays.asList(
-            row(0, 200),
-            row(1, 300),
-            row(1, 1300),
-            row(0, 1000)
+                row(0, 200),
+                row(1, 300),
+                row(1, 1300),
+                row(0, 1000)
         ));
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.AVG,
-            false,
-            false,
-            false,
-            ImmutableIntList.of(1),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(int.class),
-            null);
+                SqlStdOperatorTable.AVG,
+                false,
+                false,
+                false,
+                ImmutableIntList.of(1),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(int.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -257,15 +268,18 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         assertFalse(root.hasNext());
     }
 
-    /** */
+    /**
+     * Single.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void single(TestAggregateType testAgg) {
         Object[] res = {null, null};
 
         List<Object[]> arr = Arrays.asList(
-            row(0, res[0]),
-            row(1, res[1])
+                row(0, res[0]),
+                row(1, res[1])
         );
 
         singleAggr(testAgg, arr, res, false);
@@ -273,26 +287,26 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         res = new Object[]{1, 2};
 
         arr = Arrays.asList(
-            row(0, res[0]),
-            row(1, res[1])
+                row(0, res[0]),
+                row(1, res[1])
         );
 
         singleAggr(testAgg, arr, res, false);
 
         arr = Arrays.asList(
-            row(0, res[0]),
-            row(1, res[1]),
-            row(0, res[0]),
-            row(1, res[1])
-            );
+                row(0, res[0]),
+                row(1, res[1]),
+                row(0, res[0]),
+                row(1, res[1])
+        );
 
         singleAggr(testAgg, arr, res, true);
 
         arr = Arrays.asList(
-            row(0, null),
-            row(1, null),
-            row(0, null),
-            row(1, null)
+                row(0, null),
+                row(1, null),
+                row(0, null),
+                row(1, null)
         );
 
         singleAggr(testAgg, arr, res, true);
@@ -302,8 +316,8 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
      * Checks single aggregate and appropriate {@link Accumulators.SingleVal} implementation.
      *
      * @param scanInput Input data.
-     * @param output Expectation result.
-     * @param mustFail {@code true} If expression must throw exception.
+     * @param output    Expectation result.
+     * @param mustFail  {@code true} If expression must throw exception.
      **/
     @SuppressWarnings("ThrowableNotThrown")
     public void singleAggr(TestAggregateType testAgg, List<Object[]> scanInput, Object[] output, boolean mustFail) {
@@ -313,29 +327,29 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, scanInput);
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.SINGLE_VALUE,
-            false,
-            false,
-            false,
-            ImmutableIntList.of(1),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(Integer.class),
-            null);
+                SqlStdOperatorTable.SINGLE_VALUE,
+                false,
+                false,
+                false,
+                ImmutableIntList.of(1),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(Integer.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -350,13 +364,17 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
             assertFalse(root.hasNext());
         };
 
-        if (mustFail)
+        if (mustFail) {
             assertThrowsWithCause(r, IllegalArgumentException.class);
-        else
+        } else {
             r.run();
+        }
     }
 
-    /** */
+    /**
+     * Distinct sum.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void distinctSum(TestAggregateType testAgg) {
@@ -364,41 +382,41 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         IgniteTypeFactory tf = ctx.getTypeFactory();
         RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
         ScanNode<Object[]> scan = new ScanNode<>(ctx, rowType, Arrays.asList(
-            row(0, 200),
-            row(1, 200),
-            row(1, 300),
-            row(1, 300),
-            row(0, 1000),
-            row(0, 1000),
-            row(0, 1000),
-            row(0, 1000),
-            row(0, 200)
+                row(0, 200),
+                row(1, 200),
+                row(1, 300),
+                row(1, 300),
+                row(0, 1000),
+                row(0, 1000),
+                row(0, 1000),
+                row(0, 1000),
+                row(0, 200)
         ));
 
         AggregateCall call = AggregateCall.create(
-            SqlStdOperatorTable.SUM,
-            true,
-            false,
-            false,
-            ImmutableIntList.of(1),
-            -1,
-            RelCollations.EMPTY,
-            tf.createJavaType(int.class),
-            null);
+                SqlStdOperatorTable.SUM,
+                true,
+                false,
+                false,
+                ImmutableIntList.of(1),
+                -1,
+                RelCollations.EMPTY,
+                tf.createJavaType(int.class),
+                null);
 
-        ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+        List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
         RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
         SingleNode<Object[]> aggChain = createAggregateNodesChain(
-            testAgg,
-            ctx,
-            grpSets,
-            call,
-            rowType,
-            aggRowType,
-            rowFactory(),
-            scan
+                testAgg,
+                ctx,
+                grpSets,
+                call,
+                rowType,
+                aggRowType,
+                rowFactory(),
+                scan
         );
 
         RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
@@ -412,7 +430,10 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         assertFalse(root.hasNext());
     }
 
-    /** */
+    /**
+     * SumOnDifferentRowsCount.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     */
     @ParameterizedTest
     @EnumSource
     public void sumOnDifferentRowsCount(TestAggregateType testAgg) {
@@ -430,51 +451,51 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
                 RelDataType rowType = TypeUtils.createRowType(tf, int.class, int.class);
 
                 ScanNode<Object[]> scan = new ScanNode<>(
-                    ctx,
-                    rowType,
-                    new TestTable(
-                        grps * rowsInGroup,
+                        ctx,
                         rowType,
-                        (r) -> r / rowsInGroup,
-                        (r) -> r % rowsInGroup
-                    )
+                        new TestTable(
+                                grps * rowsInGroup,
+                                rowType,
+                                (r) -> r / rowsInGroup,
+                                (r) -> r % rowsInGroup
+                        )
                 );
 
                 AggregateCall call = AggregateCall.create(
-                    SqlStdOperatorTable.SUM,
-                    false,
-                    false,
-                    false,
-                    ImmutableIntList.of(1),
-                    -1,
-                    RelCollations.EMPTY,
-                    tf.createJavaType(int.class),
-                    null);
+                        SqlStdOperatorTable.SUM,
+                        false,
+                        false,
+                        false,
+                        ImmutableIntList.of(1),
+                        -1,
+                        RelCollations.EMPTY,
+                        tf.createJavaType(int.class),
+                        null);
 
-                ImmutableList<ImmutableBitSet> grpSets = ImmutableList.of(ImmutableBitSet.of(0));
+                List<ImmutableBitSet> grpSets = List.of(ImmutableBitSet.of(0));
 
                 RelDataType aggRowType = TypeUtils.createRowType(tf, int.class);
 
                 SingleNode<Object[]> aggChain = createAggregateNodesChain(
-                    testAgg,
-                    ctx,
-                    grpSets,
-                    call,
-                    rowType,
-                    aggRowType,
-                    rowFactory(),
-                    scan
+                        testAgg,
+                        ctx,
+                        grpSets,
+                        call,
+                        rowType,
+                        aggRowType,
+                        rowFactory(),
+                        scan
                 );
 
                 RootNode<Object[]> root = new RootNode<>(ctx, aggRowType);
                 root.register(aggChain);
 
-                Set<Integer> grpId = IntStream.range(0, grps).boxed().collect(Collectors.toSet());
+                IntSet grpId = new IntOpenHashSet(IntStream.range(0, grps).toArray());
 
                 while (root.hasNext()) {
                     Object[] row = root.next();
 
-                    grpId.remove(row[0]);
+                    grpId.remove(((Integer) row[0]).intValue());
 
                     assertEquals((rowsInGroup - 1) * rowsInGroup / 2, row[1]);
                 }
@@ -484,16 +505,15 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         }
     }
 
-    /** */
     private SingleNode<Object[]> createAggregateNodesChain(
-        TestAggregateType testAgg,
-        ExecutionContext<Object[]> ctx,
-        ImmutableList<ImmutableBitSet> grpSets,
-        AggregateCall aggCall,
-        RelDataType inRowType,
-        RelDataType aggRowType,
-        RowHandler.RowFactory<Object[]> rowFactory,
-        ScanNode<Object[]> scan
+            TestAggregateType testAgg,
+            ExecutionContext<Object[]> ctx,
+            List<ImmutableBitSet> grpSets,
+            AggregateCall aggCall,
+            RelDataType inRowType,
+            RelDataType aggRowType,
+            RowHandler.RowFactory<Object[]> rowFactory,
+            ScanNode<Object[]> scan
     ) {
         switch (testAgg) {
             case SINGLE:
@@ -509,44 +529,38 @@ public abstract class BaseAggregateTest extends AbstractExecutionTest {
         }
     }
 
-    /** */
     protected abstract SingleNode<Object[]> createSingleAggregateNodesChain(
-        ExecutionContext<Object[]> ctx,
-        ImmutableList<ImmutableBitSet> grpSets,
-        AggregateCall aggCall,
-        RelDataType inRowType,
-        RelDataType aggRowType,
-        RowHandler.RowFactory<Object[]> rowFactory,
-        ScanNode<Object[]> scan
+            ExecutionContext<Object[]> ctx,
+            List<ImmutableBitSet> grpSets,
+            AggregateCall aggCall,
+            RelDataType inRowType,
+            RelDataType aggRowType,
+            RowHandler.RowFactory<Object[]> rowFactory,
+            ScanNode<Object[]> scan
     );
 
-    /** */
     protected abstract SingleNode<Object[]> createMapReduceAggregateNodesChain(
-        ExecutionContext<Object[]> ctx,
-        ImmutableList<ImmutableBitSet> grpSets,
-        AggregateCall call,
-        RelDataType inRowType,
-        RelDataType aggRowType,
-        RowHandler.RowFactory<Object[]> rowFactory,
-        ScanNode<Object[]> scan
+            ExecutionContext<Object[]> ctx,
+            List<ImmutableBitSet> grpSets,
+            AggregateCall call,
+            RelDataType inRowType,
+            RelDataType aggRowType,
+            RowHandler.RowFactory<Object[]> rowFactory,
+            ScanNode<Object[]> scan
     );
 
-    /** */
     protected Supplier<List<AccumulatorWrapper<Object[]>>> accFactory(
-        ExecutionContext<Object[]> ctx,
-        AggregateCall call,
-        AggregateType type,
-        RelDataType rowType
+            ExecutionContext<Object[]> ctx,
+            AggregateCall call,
+            AggregateType type,
+            RelDataType rowType
     ) {
         return ctx.expressionFactory().accumulatorsFactory(type, asList(call), rowType);
     }
 
-    /** */
     enum TestAggregateType {
-        /** */
         SINGLE,
 
-        /** */
         MAP_REDUCE
     }
 }
